--- a/AppWebApi/appsettings.json
+++ b/AppWebApi/appsettings.json
@@ -31,7 +31,7 @@
     "DatabaseConnections": {
       "DefaultDataUser": "root",    //"gstusr" | "usr" | "supusr" | "dbo" | "root"
       "MigrationUser": "root",    //migration is done by root user
-      "UseDataSetWithTag": "sql-friends.mysql.docker" //"sql-friends.sqlserver.docker" | "sql-friends.mysql.docker" | "sql-friends.postgresql.docker"
+      "UseDataSetWithTag": "sql-friends.postgresql.docker" //"sql-friends.sqlserver.docker" | "sql-friends.mysql.docker" | "sql-friends.postgresql.docker"
     }
 }
 
